--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
     transition: background-color, 300ms ease-in-out;
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
     .profile-container {
         box-sizing: border-box;
         background-color: hsl(0, 0%, 12%);
@@ -121,21 +121,9 @@ body {
     }
     .links-items {
         /* display: inline-block; */
-        text-decoration: none;
-        font-size: 16px;
-        font-weight: 600;
-        margin-bottom: 14px;
-        max-width: 300px;
-        width: 100%;
+        
         
         /* overflow: scroll; */
-    }
-    .profile-img img {
-        width: 80px;
-        height: 80px;
-    }
-}
-
-
+   ``
 
 
